# constrained_types_cpp

./: .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
ct/: constrained_types.hpp
testing/: CMakeLists.txt
testing/performance_tests/: CMakeLists.txt  tests.cpp
testing/unit_tests/: CMakeLists.txt  constraints.cpp  tests.cpp
testing/ut/: main.cpp
testing/utils/: CMakeLists.txt  utils.hpp  utils_test.cpp
